--- a/Pipfile
+++ b/Pipfile
@@ -23,15 +23,15 @@ atomicwrites = "*"
 validators = "*"
 yamlfix = "*"
 yamllint = "*"
-dataclasses_json = "~=0.5"
-aws_requests_auth = "~=0.4"
-json2html = "~=1.3.0"
-"aws-cdk.core" = "1.143.0"
-"aws_cdk.aws_ec2" = "1.143.0"
-"aws_cdk.aws_iam" = "1.143.0"
-boto3 = "~=1.18"
-setuptools = "~=57.4"
-retry = "~=0.9"
+#dataclasses_json = "~=0.5"
+#aws_requests_auth = "~=0.4"
+#json2html = "~=1.3.0"
+#"aws-cdk.core" = "1.143.0"
+#"aws_cdk.aws_ec2" = "1.143.0"
+#"aws_cdk.aws_iam" = "1.143.0"
+#boto3 = "~=1.18"
+#setuptools = "~=57.4"
+#retry = "~=0.9"
 
 [dev-packages]
 
