--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ atomicwrites = "*"
 validators = "*"
 yamlfix = "*"
 yamllint = "*"
+pipenv = "*"
 #dataclasses_json = "~=0.5"
 #aws_requests_auth = "~=0.4"
 #json2html = "~=1.3.0"
